# backend

./: .dockerignore  .editorconfig  .env  .env.example  .eslintrc  .flake8  .gitignore  .travis.yml  LICENSE  Pipfile  README.md  docker-compose.yml  id_rsa.enc  kube.yml  manage.py  pytest.ini  requirements.txt  setup.cfg
.dependabot/: config.yml
.do/: deploy.template.yml
.docker/: Dockerfile  deploy.sh  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  fixture.json  nginx.conf.nginx
.github/: dependabot.yml  main.workflow
.github/confings/: production.yml
.github/workflows/: autoblack.yml  build.yml  build_and_push_docker.yml  build_dev.yml  build_prod.yml  codeql-analysis.yml  deploy.yml  dev_build_push_restart.yml  echo.yml  linter.yml  prod.yml  production.yml  pypi.yml  pythonpackage.yml  remote_host_deploy.yml  test_on_push.yml  testingyml.yml  tests.yml
backend/: Dockerfile  db.sqlite3  entrypoint.sh  manage.py
conf/: docker-compose.yml  gunicorn.sh
dependabot/: config.yml
docker/: deploy.sh  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stage.yml  docker-compose.test.yml
docker/dev/: .env  (+2 more)
docs/: CONTRIBUTING.md  FRONT_COMPILE.md  GIT_FLOW.md  PREPARE_LOCAL_SERVER.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  TRANSLITE.md  index.md  index.rst  pypi.md
frontend/: package-lock.json  package.json  server.js  webpack.config.js
frontend_old/: .babelrc  Dockerfile  package-lock.json  package.json
nginx/: Dockerfile  nginx.conf.nginx
requirements/: base.txt  dev.txt  local.txt  production.txt  test.txt
storage/: Dockerfile
(+1580 files in other folders)
