[bumpversion]
current_version = 0.0.88

[bumpversion:file:setup.cfg]

[bumpversion:file:README.md]

[coverage:run]
branch = 1
omit = 
	*/migrations/*
	*/test_*.py
	*/tests.py
source = src

[coverage:report]
exclude_lines = 
	pragma: no cover
	raise NotImplementedError
	return NotImplemented

[tool:pytest]
DJANGO_SETTINGS_MODULE = src.settings
python_files = conftest.py tests.py test_*.py *_tests.py
addopts = --cov-report html --cov=src/apps --create-db

[flake8]
exclude = 
	.*/,
	__pycache__/,
	docs/,
	*/migrations/
max-line-length = 88
statistics = True
import-order-style = pep8

[pydocstyle]
ignore = D100, D101, D102, D103, D104, D105, D106, D107, D203, D213, D407, D202
inherit = false
match-dir = src

[isort]
skip = 
	Venv
	docs
	migrations
not_skip = __init__.py
multi_line_output = 3
include_trailing_comma = True

[metadata]
name = lks
version = 0.0.88
description = A Django app with implementation lks project.
url = https://github.com/63phc/lks
author = Pavel Burns
author_email = pavel.burns@gmail.com
license = BSD License
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 3.1
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.8
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
package_dir = 
	=src

[options.packages.find]
where = src
include = pkg*
exclude = additional
